:recycle: Refactoring hardcoded domain urls into application.yml properties.